--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ SMTP_PASS=
 FRONTEND_URL=
 
 MONGODB_URI=
+
+# Postman documentation link
+# https://documenter.getpostman.com/view/16656661/2sB2qZDMw5
